# Trading-bot

./: .env.example  .gitignore  Procfile  config.py  diagnostic_nq.py  main.py  monitor.py  pyproject.toml  requirements.txt  run_backtest_shorts.py  run_strategy_finder.py  seed_trades.py
.claude/: launch.json
ai/: agent.py  prompts.py
backtesting/: engine.py  engine_5m.py  engine_aplus.py  engine_fade_rip.py  engine_orb.py  engine_vwap_pullback.py  models.py  test_all_strategies.py  trade_sim.py  walk_forward.py
dashboard/: api.py  app.py  index.html  manifest.json
data/: fetcher.py  store.py
execution/: paper.py  tradovate.py
risk/: manager.py
strategies/: aggregator.py  base.py
strategies/equities/: ross_cameron.py
strategies/futures/: breakout.py  ict.py  orb.py  pb_blake.py  pb_trading.py  pj_trades.py  tjr.py  trend_following.py  vsa.py  wyckoff.py
strategies/rules/: pb_blake.md  pb_trading.md  pj_trades.md  ross_cameron.md  tjr.md
utils/: event_calendar.py  indicators.py
