[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "strategies", "risk", "execution", "ai", "dashboard", "utils"]

[project]
name = "trading-bot"
version = "0.1.0"
description = "AI-powered day trading assistant"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.2.0",
    "ta>=0.11.0",
    "numpy>=2.0.0",
    "duckdb>=1.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.40",
    "streamlit>=1.40.0",
    "streamlit-autorefresh>=1.0.1",
    "plotly>=5.24.0",
    "httpx>=0.27.0",
    "ib_insync>=0.9.86",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
